[gd_scene load_steps=2 format=2]

[ext_resource path="res://Other/VariousEffects/DuplicateSprite/DuplicateSprite.gd" type="Script" id=1]

[node name="DuplicateSprite" type="Node2D"]
script = ExtResource( 1 )

[node name="CloneTimer" type="Timer" parent="."]

[node name="DecayTimer" type="Timer" parent="."]
[connection signal="timeout" from="CloneTimer" to="." method="_on_CloneTimer_timeout"]
[connection signal="timeout" from="DecayTimer" to="." method="_on_DecayTimer_timeout"]
